After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 763017 - tooltip text is not shown
tooltip text is not shown
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Widget: Other
3.18.x
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2016-03-03 03:30 UTC by Takao Fujiwara
Modified: 2016-03-08 16:14 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Test program (858 bytes, text/plain)
2016-03-04 06:20 UTC, Takao Fujiwara
  Details
Screencast for the test failure (90.20 KB, application/octet-stream)
2016-03-04 06:23 UTC, Takao Fujiwara
  Details
Patch for gdkdevicemanager-xi2.c (1.10 KB, patch)
2016-03-08 13:28 UTC, Takao Fujiwara
committed Details | Review

Description Takao Fujiwara 2016-03-03 03:30:48 UTC
tooltip text has not been shown since gtk 3.18.
I just called gtk_widget_set_tooltip_text():

    button = gtk_button_new_with_label ("test");
    gtk_widget_set_tooltip_text (button, "test");

It seems hovering is not detected.
This problem does not happen in gtk 3.16.
Comment 1 Matthias Clasen 2016-03-03 19:14:59 UTC
It works in a quick test here. So I probably need a complete testcase that fails for you.
Comment 2 Takao Fujiwara 2016-03-04 06:20:34 UTC
Created attachment 323061 [details]
Test program

The problem can be reproduced in Fedora 23 and 24 but does not happen in Fedora 22 or lower.
I'm attaching the a.c
Comment 3 Takao Fujiwara 2016-03-04 06:23:15 UTC
Created attachment 323062 [details]
Screencast for the test failure

Attached the screencast recording in Fedora 24, which reproduces the problem.
Comment 4 Takao Fujiwara 2016-03-04 11:42:43 UTC
This problem does not happen in Wayland.
Comment 5 Takao Fujiwara 2016-03-04 11:48:09 UTC
Sorry, this problem does not happen in Xorg in another machine.
I'm using a virtual host.
Comment 6 Takao Fujiwara 2016-03-08 13:26:55 UTC
gdk/x11/gdkdevicemanager-xi2.c:create_device() checks dev->name and my virtual host returns "Virtual core pointer" and "Virtual core XTEST pointer" and "VirtualBox USB Tablet".

"Virtual core pointer" and "Virtual core XTEST pointer" makes input_source GDK_SOURCE_MOUSE.

"VirtualBox USB Tablet" makes input_source GDK_SOURCE_MOUSE in GTK 3.16.
"VirtualBox USB Tablet" makes input_source GDK_SOURCE_TOUCHSCREEN in GTK 3.18.

https://git.gnome.org/browse/gtk+/commit/?id=29dd395b7a5b8af0af55c12763e470f1daec287b

gtk/gtktooltip.c:tooltips_enabled() returns FALSE in GTK 3.18 because gdk_device_get_source (source_device) is GDK_SOURCE_TOUCHSCREEN and cannot show the tooltip.

Currently I cannot run GNOME Wayland in the virtual host so no test in it.

The workaround is to install VBoxGuestAdditions and "VirtualBox mouse integration" will be used instead of "VirtualBox USB Tablet".
Comment 7 Takao Fujiwara 2016-03-08 13:28:32 UTC
Created attachment 323396 [details] [review]
Patch for gdkdevicemanager-xi2.c

I confirmed this patch can resolve the tooltip problem.